--- a/index.html
+++ b/index.html
@@ -515,34 +515,19 @@
           </tr>
           <tr>
             <th>Spring Framework Text Tutorial</th>
+             <th>Spring MVC Text Tutorial</th>
+
             <th>Spring Video Tutorial</th>
           </tr>
           <tr>
             <td>CodeJava</td>
-            <td>in28mins (YouTube)</td>
-          </tr>
-          <tr>
-            <td><a target="_blank" href="https://www.codejava.net/frameworks/spring/understanding-the-core-of-spring-framework">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=VdnFTjeAiJo">Link to Video</a></td>
-          </tr>
-        </table> <br>
-
-        <p><strong>Spring MVC</strong> - Next,learn Spring MVC. Spring MVC is apart of the Spring Framework</p>
-        <table>
-          <tr>
-              <th colspan="2" class="course-title">Spring MVC</th>
-          </tr>
-          <tr>
-            <th>Spring MVC Text Tutorial</th>
-            <th>Spring MVC Video Tutorial</th>
-          </tr>
-          <tr>
             <td>Code Java</td>
             <td>Simplilearn (YouTube)</td>
           </tr>
           <tr>
+            <td><a target="_blank" href="https://www.codejava.net/frameworks/spring/understanding-the-core-of-spring-framework">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://mail.codejava.net/frameworks/spring/understanding-spring-mvc">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=EL8y9t4Rg0Y">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=j3byTqx7KDE">Link to Video</a></td>
           </tr>
         </table> <br>
 
