--- a/index.html
+++ b/index.html
@@ -270,17 +270,17 @@
           <tr>
             <th>Servlets Text Tutorial</th>
             <th>JSP Text Tutorial</th>
-            <th>Java EE Tutorial</th>
+            <th>Servlets/JSP Video  Tutorial</th>
           </tr>
           <tr>
             <td>dotnettutorials</td>
             <td>dotnettutorials</td>
-            <td>Derek Banas (YouTube)</td>
+            <td>Telusko (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://dotnettutorials.net/course/java-servlets-tutorials/">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://dotnettutorials.net/lesson/java-server-pages/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLGLfVvz_LVvRfm0Z0ZCFfuTuDPxhQU99w">Link to Playlist</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=OuBUUkQfBYM">Link to Video</a></td>
           </tr>
         </table> <br>
     
