--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <td>w3schools</td>
             <td>Free Code Camp (Youtube)</td>
             <td>w3schools</td>
-            <td>Traversy Media (Youtube)</td>
+            <td>Learn WebCode (Youtube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.w3schools.com/html/default.asp">Link to w3schools</a></td>
@@ -209,32 +209,9 @@
             <td><a target="_blank" href="https://www.w3schools.com/css/default.asp">Link to w3schools</a></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v=ieTHC78giGQ&t=2463s">Link to Video</a></td>
             <td><a target="_blank" href="https://www.w3schools.com/js/default.asp">Link to w3schools</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=hdI2bqOjy3c&t=4492s">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLpcSpRrAaOargYaCNYxZCiFIp9YTqEl-l">Link to Playlist</a></td>
           </tr>
         </table> <br>
-
-
-      <p><strong>AJAX</strong> -  Asynchronous JavaScript and XML. In essence, Ajax is an efficient way for a web application to handle user interactions with a web page - a way that reduces the need to do a page refresh or full page reload for every user interaction. </p>
-
-            <table>
-              <tr>
-                  <th colspan="2" class="course-title">AJAX</th>
-              </tr>
-            <tr>
-              <th>AJAX Text Tutorial</th>
-              <th>AJAX Video Tutorial</th>
-            </tr>
-            <tr>
-              <td>w3schools</td>
-              <td>Traversy Media (Youtube)</td>
-            </tr>
-            <tr>
-                <td><a target="_blank" href="https://www.w3schools.com/js/js_ajax_intro.asp">Link to Tutorial</a></td>
-                <td><a target="_blank" href="https://www.youtube.com/watch?v=2I-vK_gaWnk&t=442s">Link to Video</a></td>
-            </tr>
-          </table> <br>
-          <hr>
-    
     
         <h4 id="linux">1.5 Linux</h4>
         <p>Learning the command line with UNIX based systems like Linux will be super important with programming so knowing the basics now will go a long way.</p>
