--- a/index.html
+++ b/index.html
@@ -178,36 +178,29 @@
     
  
     <h4>HTML, CSS, JavaScript</h4>
-        <p>Know the basics of these three.Try to find any crash course for each of these three. After that, you should know what to put under meta tag, what is div, how to add color to text with CSS, and maybe how to put a button on your site which will show a popup window with some text after the user clicks it. That will be enough.</p>
+        <p>Know the basics of these three.Try to find any crash course for each of these three. I linked to a bootcamp that not only covers these three but covers practically covers all sides of the web development process, it will definitely be helpful.</p>
 
         <table>
 
           <tr>
-              <th colspan="2" class="course-title">HTML</th>
-              <th colspan="2" class="course-title">CSS</th>
-              <th colspan="2" class="course-title">JavaScript</th>
+              <th colspan="4" class="course-title">HTML, CSS, JS</th>
+
 
           <tr>
               <th>HTML Text Tutorial</th>
-              <th>HTML Video Tutorial</th>
               <th>CSS Text Tutorial</th>
-              <th>CSS Video Tutorial</th>
               <th>JS Text Tutorial</th>
               <th>JS Video Tutorial</th>
           </tr>
           <tr>
             <td>w3schools</td>
-            <td>Free Code Camp (Youtube)</td>
             <td>w3schools</td>
-            <td>Free Code Camp (Youtube)</td>
             <td>w3schools</td>
             <td>Learn WebCode (Youtube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.w3schools.com/html/default.asp">Link to w3schools</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=916GWv2Qs08&t=2260s">Link to Video</a></td>
             <td><a target="_blank" href="https://www.w3schools.com/css/default.asp">Link to w3schools</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=ieTHC78giGQ&t=2463s">Link to Video</a></td>
             <td><a target="_blank" href="https://www.w3schools.com/js/default.asp">Link to w3schools</a></td>
             <td><a target="_blank" href="https://www.youtube.com/playlist?list=PLpcSpRrAaOargYaCNYxZCiFIp9YTqEl-l">Link to Playlist</a></td>
           </tr>
