--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               <th>HTML Text Tutorial</th>
               <th>CSS Text Tutorial</th>
               <th>JS Text Tutorial</th>
-              <th>JS Video Tutorial</th>
+              <th>Web Development Bootcamp Video Tutorial</th>
           </tr>
           <tr>
             <td>w3schools</td>
