--- a/index.html
+++ b/index.html
@@ -492,12 +492,12 @@
           <tr>
             <td>CodeJava</td>
             <td>Code Java</td>
-            <td>Simplilearn (YouTube)</td>
+            <td>Telusko (YouTube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.codejava.net/frameworks/spring/understanding-the-core-of-spring-framework">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://mail.codejava.net/frameworks/spring/understanding-spring-mvc">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=j3byTqx7KDE">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=If1Lw4pLLEo">Link to Video</a></td>
           </tr>
         </table> <br>
 
