--- a/index.html
+++ b/index.html
@@ -481,23 +481,29 @@
         <p><strong>Spring Framework(Core)</strong> - You should definitely use Spring Boot but I think you should not start with it. Start with Spring Core.</p>
         <table>
           <tr>
-              <th colspan="3" class="course-title">Spring Framework</th>
+              <th colspan="4" class="course-title">Spring Framework</th>
           </tr>
           <tr>
             <th>Spring Framework Text Tutorial</th>
+            <th>Spring Framework Video Tutorial</th>
              <th>Spring MVC Text Tutorial</th>
+             <th>Spring MVC Video Tutorial</th>
 
-            <th>Spring Video Tutorial</th>
+
           </tr>
           <tr>
             <td>CodeJava</td>
             <td>Code Java</td>
             <td>Telusko (YouTube)</td>
+            <td>Telusko (YouTube)</td>
+
           </tr>
           <tr>
             <td><a target="_blank" href="https://www.codejava.net/frameworks/spring/understanding-the-core-of-spring-framework">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://mail.codejava.net/frameworks/spring/understanding-spring-mvc">Link to Tutorial</a></td>
             <td><a target="_blank" href="https://www.youtube.com/watch?v=If1Lw4pLLEo">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/watch?v=g2b-NbR48Jo">Link to Video</a></td>
+
           </tr>
         </table> <br>
 
