--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
           </tr>
           <tr>
             <td>DotNetTutorials</td>
-            <td>FreeCodeCamp(Youtube)</td>
+            <td>Simplified(Youtube)</td>
           </tr>
           <tr>
             <td><a target="_blank" href="https://dotnettutorials.net/course/mysql-tutorials-for-beginners-and-professionals/">Link to Tutorial</a></td>
-            <td><a target="_blank" href="https://www.youtube.com/watch?v=ER8oKX5myE0&t=3900s">Link to Video</a></td>
+            <td><a target="_blank" href="https://www.youtube.com/playlist?list=PL_RGaFnxSHWr_6xTfF2FrIw-NAOo3iWMy">Link to Playlist</a></td>
 
           </tr>
         </table> <br>
